--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>profile</title>
-
+    <link rel="icon" href="/./img/logo-primary.png">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
 
     <!-- FONT GOOGLE -->
@@ -765,6 +765,8 @@ Chúng tôi sẽ tiếp tục xem xét sử dụng các dịch vụ khác của 
                 </div>
             </div>
         </div> -->
+
+        <!-- BACKTOTOP -->
         <a href="#" class="backToTop cd-top text-replace js-cd-top">
             <i class="fa fa-angle-up"></i>
         </a>
