--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thông tin liên hệ</title>
-    <link rel="icon" href="/./img/logo-primary.png">
+    <link rel="icon" href="./img/logo-primary.png">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
 
     <!-- FONT GOOGLE -->
