--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
             <div class="container">
                 <div class="footer__grid row">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                        <img class="footer__logo" src="./img/LOGO 2/Chữ lớn/Logo Vinamix Tech-dương bản(Màu trắng).png" alt="">
+                        <img class="footer__logo" src="./img/LOGO 2/Chữ lớn/Logo Vinamix Tech-dương bản(Màu trắng).png" alt="logo-primary">
                         <div class="footer__contact">
                             <i class="fa fa-map-marker-alt"></i>
                             <a href="#">41 Đường số 2, KĐT Vạn Phúc, P. Bình Phước, TP. Thủ Đức, TP. HCM</a>
