--- a/contact.html
+++ b/contact.html
@@ -257,7 +257,15 @@
             </div>
         </div>
     </footer>
-    <!-- quick-call -->
+    <!-- Load jQuery first -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <!-- Load Bootstrap's JavaScript bundle -->
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <!-- Load Owl Carousel -->
+    <script src="./js/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
     <!-- https://upload.wikimedia.org/wikipedia/commons/9/91/Icon_of_Zalo.svg -->
     <div class="quick-alo-phone">
         <a href="tel:0815222263" title="Liên hệ nhanh">
