--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="VINAMIX TECH" content="Thiết kế mobile app, thiết kế website, thiết kế web app, pwa, Zalo app" />
     <title>Thông tin liên hệ</title>
     <link rel="icon" href="./img/logo-primary.png">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
