--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="VINAMIX TECH" content="Thiết kế mobile app, thiết kế website, thiết kế web app, pwa, Zalo app" />
+    <meta name="description" content="Hàng đầu, IT, Thiết kế mobile app, thiết kế website, thiết kế web app, pwa, zalo app, ui/ux, domain, Hosting">
     <title>Thông tin liên hệ</title>
     <link rel="icon" href="./img/logo-primary.png">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
@@ -254,7 +254,7 @@
         </div>
         <div class="footer__bottom">
             <div>
-                © 2023 Instruction. All rights reserved
+                Vinamixtech © 2023 All rights reserved
             </div>
         </div>
     </footer>
