--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="VINAMIX TECH" content="Thiết kế mobile app, thiết kế website, thiết kế web app, pwa, Zalo app" />
-    <title>profile</title>
+    <meta name="description" content="Hàng đầu, IT, Thiết kế mobile app, thiết kế website, thiết kế web app, pwa, zalo app, ui/ux, domain, Hosting">
+    <title>Vinamixtech Solutions</title>
     <link rel="icon" href="./img/logo-primary.png" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
 
@@ -37,10 +37,9 @@
     <header>
         <div class="header__top d-flex justify-content-between align-items-center container-fluid py-2">
             <div class="header__left">
-                <a href="tel:0815222263" class="text-white mr-4"><i class="fas fa-phone-alt"></i> 0815222263</a
-          >
-          <a href="mailto:ts.solutions.tech@gmail.com" class="text-white"
-            ><i class="far fa-envelope"></i> ts.solutions.tech@gmail.com</a
+                <!-- <a href="tel:0815222263" class="text-white mr-4"><i class="fas fa-phone-alt"></i> 0815222263</a
+          > -->
+                <a href="mailto:ts.solutions.tech@gmail.com" class="text-white"><i class="far fa-envelope"></i> ts.solutions.tech@gmail.com</a
           >
         </div>
         <div class="header__right">
@@ -751,7 +750,7 @@
         </div>
         </div>
         <div class="footer__bottom">
-            <div>© 2023 Instruction. All rights reserved</div>
+            <div>Vinamixtech © 2023 All rights reserved</div>
         </div>
         </footer>
 
