--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="./css/contact.css">
     <!-- BASE CSS -->
     <link rel="stylesheet" href="./css/base.css">
+    <!-- responsive -->
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
@@ -39,14 +41,15 @@
     <header>
         <div class="header__top d-flex justify-content-between align-items-center container-fluid py-2">
             <div class="header__left">
-                <a href="tel:0815222263" class="text-white mr-4"><i class="fas fa-phone-alt"></i> 0815222263</a
-          >
-          <a href="mailto:ts.solutions.tech@gmail.com" class="text-white"
-            ><i class="far fa-envelope"></i> ts.solutions.tech@gmail.com</a
-          >
-        </div>
-        <div class="header__right">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <!-- <a href="tel:0815222263" class="text-white mr-4"><i class="fas fa-phone-alt"></i> 0815222263</a
+          > -->
+                <a href="mailto:ts.solutions.tech@gmail.com" class="text-white">
+                    <i class="far fa-envelope"></i>
+                    <p>ts.solutions.tech@gmail.com</p>
+                </a>
+            </div>
+            <div class="header__right">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-tiktok"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -54,22 +57,18 @@
         </div>
         <nav class="navInstruction navbar navbar-expand-md container">
             <a class="navbar-brand text-center" href="#">
-                <img src="./img/logo-primary.png" alt="Instruction Logo" class="img-fluid" style="max-width: 80px" />
+                <img src="./img/logo-primary.png" alt="logo-primary" class="img-fluid" style="max-width: 80px" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarInstruction" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
             <div class="collapse navbar-collapse" id="navbarInstruction">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="./index.html">Trang Chủ</a>
                     </li>
-                    <li class="nav-item nav-service">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Dịch Vụ</a>
-                        <!-- service list -->
-                        <div class="nav-service__list">
-
-                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Đối Tác</a>
@@ -85,11 +84,10 @@
                 Sản Phẩm
               </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">FarmStay</a>
-                            <a class="dropdown-item" href="#">Booking Warranty</a>
+                            <a class="dropdown-item" href="#">Smart door lock</a>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="./contact.html">Liên Hệ</a>
                     </li>
                 </ul>
@@ -125,21 +123,21 @@
         <!-- quick-contact-form -->
         <div class="contact-page__form col-12 col-sm-12 col-md-6 col-lg-6">
             <input type="text" class="contact-page__input" placeholder="Tên">
-            <input type="text" class="contact-page__input" placeholder="Số điện thoại">
+            <input type="number" class="contact-page__input" placeholder="Số điện thoại">
+            <input type="email" class="contact-page__input" placeholder="Email">
             <input type="text" class="contact-page__input" placeholder="Lĩnh vực kinh doanh">
 
             <select class="contact-page__input" placeholder="kinh phí dự kiến">
                 <option value="50 -> 100 triệu">kinh phí dự kiến</option>
-                <option value="50 -> 100 triệu">0 -&gt; 10 triệu</option>
-                <option value="50 -> 100 triệu">10 -&gt; 20 triệu</option>
-                <option value="50 -> 100 triệu">20 -&gt; 30 triệu</option>
-                <option value="50 -> 100 triệu">30 -&gt; 40 triệu</option>
-                <option value="50 -> 100 triệu">40 -&gt; 50 triệu</option>
-                <option value="50 -> 100 triệu">50 -&gt; 60 triệu</option>
-                <option value="50 -> 100 triệu">60 -&gt; 70 triệu</option>
-                <option value="50 -> 100 triệu">70 -&gt; 80 triệu</option>
-                <option value="50 -> 100 triệu">80 -&gt; 90 triệu</option>
-                <option value="50 -> 100 triệu">90 -&gt; 100 triệu</option>
+                <option value="50 -> 100 triệu">0 -&gt; 50 triệu</option>
+                <option value="50 -> 100 triệu">50 -&gt; 100 triệu</option>
+                <option value="50 -> 100 triệu">100 -&gt; 150 triệu</option>
+                <option value="50 -> 100 triệu">150 -&gt; 200 triệu</option>
+                <option value="50 -> 100 triệu">200 -&gt; 250 triệu</option>
+                <option value="50 -> 100 triệu">250 -&gt; 300 triệu</option>
+                <option value="50 -> 100 triệu">300 -&gt; 350 triệu</option>
+                <option value="50 -> 100 triệu">350 -&gt; 400 triệu</option>
+                <option value="50 -> 100 triệu">&gt; 400 triệu</option>
                 
             </select>
             <textarea class="contact-page__input" rows="4" placeholder="Nội dung..."></textarea>
@@ -182,19 +180,23 @@
                         </div>
                         <div class="footer__link">
                             <i class="fa fa-long-arrow-alt-right"></i>
-                            <a href="#">Iot - Internet Of Thing</a>
+                            <a href="#">Thiết kế App Mobile</a>
                         </div>
                         <div class="footer__link">
                             <i class="fa fa-long-arrow-alt-right"></i>
-                            <a href="#">API/Server</a>
+                            <a href="#">Thiết kế API</a>
                         </div>
                         <div class="footer__link">
                             <i class="fa fa-long-arrow-alt-right"></i>
-                            <a href="#">Cung cấp Domain - tên miền</a>
+                            <a href="#">Dịch vụ Domain, Server</a>
                         </div>
                         <div class="footer__link">
                             <i class="fa fa-long-arrow-alt-right"></i>
                             <a href="#">Hỗ trợ đồ án - khóa luận tốt nghiệp</a>
+                        </div>
+                        <div class="footer__link">
+                            <i class="fa fa-long-arrow-alt-right"></i>
+                            <a href="#">Iot - Internet Of Thing</a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
@@ -217,7 +219,7 @@
                         </div>
                         <div class="footer__link">
                             <i class="fa fa-long-arrow-alt-right"></i>
-                            <a href="#">Liên hệ</a>
+                            <a href="./contact.html">Liên hệ</a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
@@ -229,24 +231,23 @@
                         <input type="text" class="quick-contact__input" placeholder="Lĩnh vực kinh doanh">
 
                         <select class="quick-contact__input" placeholder="kinh phí dự kiến">
-                  <option value="50 -> 100 triệu">kinh phí dự kiến</option>
-                  <option value="50 -> 100 triệu">0 -&gt; 10 triệu</option>
-                  <option value="50 -> 100 triệu">10 -&gt; 20 triệu</option>
-                  <option value="50 -> 100 triệu">20 -&gt; 30 triệu</option>
-                  <option value="50 -> 100 triệu">30 -&gt; 40 triệu</option>
-                  <option value="50 -> 100 triệu">40 -&gt; 50 triệu</option>
-                  <option value="50 -> 100 triệu">50 -&gt; 60 triệu</option>
-                  <option value="50 -> 100 triệu">60 -&gt; 70 triệu</option>
-                  <option value="50 -> 100 triệu">70 -&gt; 80 triệu</option>
-                  <option value="50 -> 100 triệu">80 -&gt; 90 triệu</option>
-                  <option value="50 -> 100 triệu">90 -&gt; 100 triệu</option>
-                  
-                </select>
+                            <option value="50 -> 100 triệu">kinh phí dự kiến</option>
+                            <option value="50 -> 100 triệu">0 -&gt; 50 triệu</option>
+                            <option value="50 -> 100 triệu">50 -&gt; 100 triệu</option>
+                            <option value="50 -> 100 triệu">100 -&gt; 150 triệu</option>
+                            <option value="50 -> 100 triệu">150 -&gt; 200 triệu</option>
+                            <option value="50 -> 100 triệu">200 -&gt; 250 triệu</option>
+                            <option value="50 -> 100 triệu">250 -&gt; 300 triệu</option>
+                            <option value="50 -> 100 triệu">300 -&gt; 350 triệu</option>
+                            <option value="50 -> 100 triệu">350 -&gt; 400 triệu</option>
+                            <option value="50 -> 100 triệu">&gt; 400 triệu</option>
+                        </select>
+                        <input type="email" class="quick-contact__input" placeholder="Email">
                         <div class="quick-contact__form">
-                            <input type="text" class="quick-contact__input" placeholder="Số điện thoại">
+                            <input type="number" class="quick-contact__input" placeholder="Số điện thoại">
                             <button class="quick-contact__button">
-                    <img class="quick-contact__img" src="./img/paper.png" alt="icon">
-                  </button>
+                                <img class="quick-contact__img" src="./img/paper.png" alt="icon">
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -268,19 +269,54 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
     <!-- https://upload.wikimedia.org/wikipedia/commons/9/91/Icon_of_Zalo.svg -->
-    <div class="quick-alo-phone">
+    <div class="quick-alo-phone hide-on-mobile">
         <a href="tel:0815222263" title="Liên hệ nhanh">
             <i class="fa-solid fa-phone"></i>
         </a>
         <div class="quick-alo__fill"></div>
         <div class="quick-alo__border"></div>
     </div>
-    <div class="quick-alo-zalo">
-        <a href="#" title="Zalo">
+    <div class="quick-alo-zalo hide-on-mobile">
+        <a href="https://zalo.me/841275222263" title="Zalo">
             <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Icon_of_Zalo.svg" alt="zalo-icon">
         </a>
         <div class="quick-alo__fill"></div>
         <div class="quick-alo__border"></div>
+    </div>
+    <div class="quick-alo-mes hide-on-mobile">
+        <a href="#" title="Messenger">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/be/Facebook_Messenger_logo_2020.svg" alt="zalo-icon">
+        </a>
+        <div class="quick-alo__fill"></div>
+        <div class="quick-alo__border"></div>
+    </div>
+
+    <!-- BOTTOM MENU MOBILE -->
+    <div class="bottom-menu hide-on-tablet hide-on-lag">
+        <div class="bottom-menu__phone">
+        <a href="tel:0815222263" title="Liên hệ nhanh">
+            <i class="fa-solid fa-phone"></i>
+            <p>Hotline</p>
+        </a>
+        </div>
+
+        <div class="bottom-menu__zalo">
+        <a href="https://zalo.me/841275222263">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Icon_of_Zalo.svg" alt="zalo-icon">
+        </a>
+        </div>
+
+        <div class="bottom-menu__messenger">
+        <a href="#">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/be/Facebook_Messenger_logo_2020.svg" alt="messenger-icon">
+        </a>
+        </div>
+
+        <div class="bottom-menu__profile">
+        <a href="#">
+            <i class="fa-solid fa-file-invoice"></i>
+        </a>
+        </div>
     </div>
 </body>
 
