--- a/contact.html
+++ b/contact.html
@@ -68,13 +68,13 @@
                         <a class="nav-link" href="./index.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Dịch Vụ</a>
+                        <a class="nav-link" href="./service.html">Dịch Vụ</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Đối Tác</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hồ Sơ Năng Lực</a>
+                        <a class="nav-link" href="#">Hồ Sơ Năng Lực</a> -->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Về VT</a>
@@ -84,7 +84,7 @@
                 Sản Phẩm
               </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Smart door lock</a>
+                            <a class="dropdown-item" href="./product.html">Smart door lock</a>
                         </div>
                     </li>
                     <li class="nav-item active">
