--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                           class="dropdown-menu"
                           aria-labelledby="navbarDropdownMenuLink"
                         >
-                          <a class="dropdown-item" href="./product.html"
+                          <a class="dropdown-item" href="./smartdoor.html"
                             >Smart door lock</a
                           >
                         </div>
