--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                           class="dropdown-menu"
                           aria-labelledby="navbarDropdownMenuLink"
                         >
-                          <a class="dropdown-item" href="./product.html"
+                          <a class="dropdown-item" href="./smartdoor.html"
                             >Smart door lock</a
                           >
                         </div>
